<?xml version="1.0"?>
<package format="3">
    <name>mujocoros2</name>
    <version>0.0.1</version>
    <description>ros2 wrapper for mujoco</description>

    <maintainer email="sina.aghli@gmail.com">Sina Aghli</maintainer>
    <author email="sina.aghli@gmail.com">Sina Aghli</author>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/mujocoros2</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/mujocoros2/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/mujocoros2/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>s
    <buildtool_depend>eigen3_cmake_module</buildtool_depend>
    <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

    <depend>eigen</depend>
    <depend>rclcpp</depend>
    <depend>mujoco</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
